client/src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.bottom-left {
  position: relative;
  bottom: 14px;
}

.img-text-color {
  color: white;
  background-color: rgba(0, 0, 0, 0.8);
  text-align: center;
  font-size: small;
}

.img-size {
  width: 120.281px;
  height: 67px;
  margin-bottom: 0px;
}

.size-hero {
  width: 120.281px;
  height: 63px;
  margin-top: 10px;
}

.display-all-bg-color {
  background-color: rgb(28,36,45);
}

.grey-color{
  background-color: rgb(46,55,64);
}

.tableColor1{
  border: 1px solid rgb(0,0,0)
}

.rowBG1{
  background-color: rgb(40,51,61);
}

.rowBG2{
  background-color: rgb(45,55,65);
}

